updated introduction and related work

--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -147,7 +147,7 @@ Amir Azarbakht\\
 
 
 \begin{abstract}
-Social networks are a ubiquitous part of our social lives, and the creation of online social communities has been a natural extension of this phenomena. Free and Open Source Software Development efforts are prime examples of how communities can be leverages in software development, where group are formed around communities of interest, and depend on continued interest and involvement. Forking, either as a violent split or a friendly divide, affects the community. Most research on forking is post-hoc. The run-up to fork is seldom looked at. This leaves a number of questions unanswered. In this study, we propose to use temporal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify better measures for influence and the shift of influence, measures associated with unhealthy group dynamics, e.g. a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. This will help predict formation of unhealthy dynamics, which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
+Social networks are a ubiquitous part of our lives, and the creation of online social communities has been a natural extension of this phenomena. Free and Open Source Software (FOSS) development efforts are prime examples of how communities can be leveraged in software development, where group are formed around communities of interest, and depend on continued interest and involvement. Forking, either as a violent split or a friendly divide, affects the community. Most existing research on forking is post-hoc. The run-up to fork is seldom studied. This leaves a number of questions unanswered. In this study, we propose to use longitudinal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify better measures for influence and the shift of influence, measures associated with unhealthy group dynamics, e.g. a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. This will help predict formation of unhealthy dynamics, which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
 %How can we understand FOSS collaboration better? Can social issues that emerge be identified and addressed as they happen? Can the community heal itself, become more transparent and inclusive, and promote diversity? We propose a technique to address these issues by quantitative analysis and temporal visualization of social dynamics in FOSS communities. We propose using social network analysis to identify unhealthy dynamics; this will help predict formation of unhealthy dynamics and which gives the community a heads-up when they can still take action to ensure the sustainability of the project.
 \end{abstract}
 
@@ -157,30 +157,30 @@ Social networks are a ubiquitous part of our social lives, and the creation of o
 
 \terms{Measurement, Reliabality, Human Factors}
 
-\keywords{Free/Open Source Software, Social Dynamics, Temporal Analysis, Forking, Visualization, Temporal Visualization, Social Network Analysis, FOSS, FLOSS.} % NOT required for Proceedings
+\keywords{Free and Open Source Software, Social Dynamics, Temporal Analysis, Forking, Longitidinal Social Network Analysis, ERGM, Separable Temporal Exponential Family Random Graph Models, STERGM, FOSS.} % NOT required for Proceedings
 
 \section{Introduction}
 \label{introduction}
-Social networks are a ubiquitous part of our social lives, and the creation of online social communities has been a natural extension of this phenomena. Social media plays an important role in software engineering, as software developers use them to communicate, learn, collaboborate and coordinate with others.\cite{Storey} Free and Open Source Software (FOSS) development efforts are prime examples of how community can be leveraged in software development, groups are formed around communities of interest, and depend on continued interest and involvement in order to stay alive.\cite{NymanCodeForking}
+Social networks are a ubiquitous part of our social lives, and the creation of online social communities has been a natural extension of this phenomena. Social media plays an important role in software engineering, as software developers utilize them to communicate, learn, collaboborate and coordinate with others \cite{Storey}. Free and Open Source Software (FOSS) development efforts are prime examples of how community can be leveraged in software development, where groups are formed around communities of interest, and depend on continued interest and involvement in order to stay alive \cite{NymanCodeForking}.
 
-Though the bulk of collaboration and communication in FOSS communities occurs online and is publicly accessible, there are still many open questions about the social dynamics in FOSS communities. Projects might go through a metamorphosis when faced with an influx of new developers or the involvement of an outside organization. Conflicts between developers' divergent visions about the future of the project might lead to forking of the project and dilution of the community. Forking, either as a violent split when there is a conflict or as a friendly divide when new features are experimentally added both affect the community \cite{Bezrukova}.
+Although the bulk of collaboration and communication in FOSS communities occurs online and is publicly accessible, there are still many open questions about the social dynamics in FOSS communities. Projects might go through a metamorphosis when faced with an influx of new developers or the involvement of an outside organization. Conflicts between developers' divergent visions about the future of the project might lead to forking of the project and dilution of the community. Forking, either as a violent split when there is a conflict or as a friendly divide when new features are experimentally added both affect the community \cite{Bezrukova}.
 
-Previous research on forking ranges from the studies of Robles et al. \cite{Robles} on forking that identified all significant FOSS forks since 1990, to the works of Baishakhi et al. \cite{Baishakhi} on post-forking porting of new features or bug fixes from peer projects. It encompasses works of Nyman on developers' opinions about forking \cite{NymanHackersForking}, developers motivations for performing forks \cite{NymanToForkOrNotToFork}, the necessity of code forking as tool for sustainability \cite{NymanForkingSustainability}, and Syeed's work on socio-technical dependencies in the BSD projects family \cite{Syeed}.
+Previous research on forking ranges from the studies of Robles et al. \cite{Robles} that identified all significant FOSS forks since 1990, to the works of Baishakhi et al. \cite{Baishakhi} on post-forking porting of new features or bug fixes from peer projects. It encompasses works of Nyman on developers' opinions about forking \cite{NymanHackersForking}, developers motivations for performing forks \cite{NymanToForkOrNotToFork}, the necessity of code forking as tool for sustainability \cite{NymanForkingSustainability}, and Syeed's work on socio-technical dependencies in the BSD projects family \cite{Syeed}.
 
-Most research on forking, however, is post-hoc. It looks at the forking events in restrospect and tries to find the outcome of the fork; what happened after the fork happened; what was the cause of forking, and such. The run-up to the forking events are seldom looked at. This leaves a number of questions unanswered: Was it a long-term trend? Was the community polarized, before forking happened? Was there a shift of influence? Did the center of gravity of the community change? What was the tipping point? Was it predictable? Is it ever predictable? We are missing that context. 
+Most existing research on forking, however, is post-hoc. It looks at the forking events in restrospect and tries to find the outcome of the fork; what happened after the fork happened; what was the cause of forking, and such. The run-up to the forking events are seldom studied. This leaves a number of questions unanswered: Was it a long-term trend? Was the community polarized, before forking happened? Was there a shift of influence? Did the center of gravity of the community change? What was the tipping point? Was it predictable? Is it ever predictable? We are missing that context. 
 
 Additionally, studies of FOSS communities tend to suffer from an important limitation. They treat community as a static structure rather than a dynamic process. Longitudinal studies on open source forking are rare.
 
 Our research proposes to use temporal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify better measures for influence, and the shift of influence, measures associated with unhealthy group dynamics, e.g. a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. 
 
-This paper is organized as follows: We present related literature on online social communities. We then present the gap in the literature, and discuss why the issue needs to be addressed. After that, in methodology, we describe research goals and research questions, how data gathering, analysis, and visualization of the findings is proposed to be done. At the end, we present preliminary results, discussion and threats to validity.
+This paper is organized as follows: We present related literature on open source social communities. We then present the gap in the literature, and discuss why the issue needs to be addressed. After that, in methodology, we describe research goals and research questions, how data gathering, statistical modeling, and qualitative analysis are proposed to be done. At the end, we present preliminary results of our initial study, conclusions, the timeline for the proposed research, and threats to validity.
 
 \section{Related Work}
 \label{relatedwork}
 
-The social structures of free and open source software development communities have been studied extensively. Researchers have studied the social structure and dynamics of team communications \cite{Bird}\cite{HowisonSocialDynamics}\cite{HowisonFlossMole}\cite{Guzzi}\cite{Nakakoji}, identifying knowledge brokers and associated activities \cite{Sowe}, project sustainability \cite{NymanForkingSustainability}\cite{Nakakoji}, forking \cite{NymanCodeForking}, requirement satisfation \cite{Ernst}, their topology \cite{Bird}, their demographic diversity \cite{Kunegis}, gender differences in the process of joining them \cite{Kuechler}, and the role of age and the core team in their communities \cite{Torres}\cite{DavidsonVLHCC2014}, etc. Most of these studies have tended to look at community as a static structure rather than a dynamic process \cite{CrowstonFLOSSWhatWeKnow}. This makes it hard to determine cause and effect, or the exact impact of social changes.
+The free and open source software development communities have been studied extensively. Researchers have studied the social structure and dynamics of team communications \cite{Bird}\cite{HowisonSocialDynamics}\cite{HowisonFlossMole}\cite{Guzzi}\cite{Nakakoji}, identifying knowledge brokers and associated activities \cite{Sowe}, project sustainability \cite{NymanForkingSustainability}\cite{Nakakoji}, forking \cite{NymanCodeForking}, requirement satisfation \cite{Ernst}, their topology \cite{Bird}, their demographic diversity \cite{Kunegis}, gender differences in the process of joining them \cite{Kuechler}, and the role of age and the core team in their communities \cite{Torres}\cite{DavidsonVLHCC2014}\cite{AzarbakhtOSS2014}\cite{AzarbakhtINSNA2014}. Most of these studies have tended to look at community as a static structure rather than a dynamic process \cite{CrowstonFLOSSWhatWeKnow}. This makes it hard to determine cause and effect, or the exact impact of social changes.
 
-Post-forking porting of new features or bug fixes from peer projects happens among forked projects \cite{Baishakhi}. A case study of the BSD family, i.e. FreeBSD, OpenBSD, and NetBSD, all of which evolved from the same codebase found that 10-15\% of lines in BSD release patches consist of ported edits, and on average 26-58\% of active developers participate in porting per release. They also found that over 50\% of ported changes propagate to other projects within three releases. \cite{Baishakhi}
+Post-forking porting of new features or bug fixes from peer projects happens among forked projects \cite{Baishakhi}. A case study of the BSD family, i.e. FreeBSD, OpenBSD, and NetBSD, all of which evolved from the same codebase found that 10-15\% of lines in BSD release patches consist of ported edits, and on average 26-58\% of active developers participate in porting per release. They also found that over 50\% of ported changes propagate to other projects within three releases \cite{Baishakhi}. This shows the amount of work developers need to do to synchronize and keep up with development in parallel projects. 
 
 Visual exploration of the collaboration networks in the WebKit project was the focus of a study that aimed to observe how key events in the mobile-device industry affected the WebKit collaboration network over its lifetime. \cite{JoseWebKit} They found that \textit{coopetition} (both competition and collaboration) exists in the open source community; morover, they observed that the ``firms that played a more central role in the WebKit project such as Google, Apple and Samsung were by 2013 the leaders of the mobile-devices industry. While more peripheral firms such as RIM and Nokia lost market-share \cite{JoseWebKit}''.
 
@@ -580,7 +580,7 @@ CUSUM betweenness & sharp increase & - & increase & - \\
 
 \section{Initial study: Temporal network-specific analysis}
 
-In this study, we wanted to analyze the network-specific changes that happen to the community over a given period of time, e.g. three months before and three months after the year in which the forking event happened. For our first study, we measured betweenness centrality \cite{Brandes} of the most significant nodes in the graph, and the graph diameter over time. Figures [\ref{figureKamailioStackedAreaChart}][\ref{figureAmarokStachedAreaChart}][\ref{figureAsteriskStackedAreaChart}] show the betweenness centralities over the 1.5 year period for the Kamailio, Amarok and Asterisk projects respectively. To do temporal analysis, we had two options; 1) look at snapshots of the network state over time, (e.g. to look at the network snapshots in every week, the same way that a video is composed of many consecutive frames), and 2) look at a period through a time window. We preferred the second approach, and looked through a time window of three months wide with 1.5 month overlaps. To create the visualizations, we used a 3 months time frame that progressed six days a frame. In this way, we had a relatively smooth transition.
+In this study\cite{AzarbakhtOpenSym2013}\cite{AzarbakhtOSS2013}\cite{AzarbakhtVLHCC2014}, we wanted to analyze the network-specific changes that happen to the community over a given period of time, e.g. three months before and three months after the year in which the forking event happened. For our first study, we measured betweenness centrality \cite{Brandes} of the most significant nodes in the graph, and the graph diameter over time. Figures [\ref{figureKamailioStackedAreaChart}][\ref{figureAmarokStachedAreaChart}][\ref{figureAsteriskStackedAreaChart}] show the betweenness centralities over the 1.5 year period for the Kamailio, Amarok and Asterisk projects respectively. To do temporal analysis, we had two options; 1) look at snapshots of the network state over time, (e.g. to look at the network snapshots in every week, the same way that a video is composed of many consecutive frames), and 2) look at a period through a time window. We preferred the second approach, and looked through a time window of three months wide with 1.5 month overlaps. To create the visualizations, we used a 3 months time frame that progressed six days a frame. In this way, we had a relatively smooth transition.
 
 \begin{figure}[!ht]
 \centering
