updated Research Objectives

--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -280,13 +280,13 @@ Specifically, our research objective and research questions are listed in the fo
 
 To study the properties of possible social patterns, we need to verify their existence. More specifically, we need to check whether the possible social patterns are manifested in the the collaboration artefacts of open source projects, e.g. mailing list data, issue tracking systems data, source code data.
 
-\subsubsection{Are there differences between those traces for different types of forks?\\}
+\subsubsection{Do differences types of forks leave different tyoes of traces?\\}
 
 If forks leave traces in the collaboration artifacts, do forks exhibit different social patterns? Are there patterns that exemplify these categories? For example, is there a prototypical ``personal differences'' fork collaboration pattern? If so, do different forking reasons have distinctly different social patterns associated with them? 
 
 Is a project labeled as a ``\textit{technical differences}'' fork really only a ``\textit{technical differences}'' fork? Or, alternatively, can they be a mix of several reason categories?
 
-\subsubsection{What are the key indicators that can tell us distinguish between these types?\\}
+\subsubsection{What are the key indicators that can tell us distinguish between different types of forks?\\}
 
 What establishes an inflection point (fork)? Which metrics are indicative of inflection? Is there a metric that can be used to monitor the odds of change, e.g. forking, ahead of time?
 
@@ -295,7 +295,7 @@ What establishes an inflection point (fork)? Which metrics are indicative of inf
 %How to prove it? (activity): \\
 %one to many relationship (mapping) shoud have.\\
 
-\subsubsection{Ground truth? Or, does our analysis match what people in the community remember?\\} 
+\subsubsection{Does our analysis match what people in the community remember?\\} 
 
 To validate what our quantitative data mining approach finds, we can compare it to what people remember of the situation, and what is written about that project. This validation check requires interviewing people from the studied forked projects. Semi-structured interviews need to be conducted, with as many developers from the forked projects, till the interviewers reach a point of saturation, i.e. when no new information is gained by doing more interviews. These semi-structured interviews will be recorded, transcribed, and coded, to find common patterns in the interviewee responses.
 
@@ -329,12 +329,12 @@ To find patterns uniquely associated with undesirable forks, we need to gather d
 \begin{table}[!htbp]
 \caption{Not all forks are bad; Three types of forking for which data will be collected}
 \label{tableUndesirableForkingDataCollect} 
-\begin{tabular}{p{0.5\columnwidth} p{0.4\columnwidth}}
+\begin{tabular}{p{0.6\columnwidth} p{0.3\columnwidth}}
 \hline\noalign{\smallskip}
 \textbf{Type of forking} & \textbf{Abbrevation} \\
 \noalign{\smallskip}\hline\noalign{\smallskip}
 Undesirable forking & U.F. \\ \hline
-Healthy/Acceptable forking & H.F. \\\hline
+Other (Healthy/Other) forking & H.F. \\\hline
 No forking at all & No.F. \\
 \noalign{\smallskip}\hline
 \end{tabular}
